--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,15 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "src",
+    "paths": {
+    "@app/*":[
+      "app/*"
+    ],
+    "@src/*":[
+      "*"
+    ]
+    },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -21,7 +29,10 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "resolveJsonModule": true,
+    "esModuleInterop": true
+    
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
