--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
@@ -32,7 +32,7 @@
     ],
     "resolveJsonModule": true,
     "esModuleInterop": true
-    
+
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
